authentication docs
