# nodejs/class-notes/TEKRAR/18-PersonnelAPI _LOG_DOCS/src/controllers/auth.controller.js
@@ -15,6 +15,18 @@ module.exports = {
             #swagger.tags = ['Authentication']
             #swagger.summary = 'JWT: Login'
             #swagger.description = 'Login with username and password'
+            _swagger.deprecated = true
+            _swagger.ignore = true
+            #swagger.parameters['body'] = {
+              in: 'body',
+              required: true,
+              schema: {
+                username: 'test',
+                password: '1234'
+              }
+            }
+            
+            
         */
 
     /*
@@ -84,6 +96,16 @@ module.exports = {
             #swagger.tags = ['Authentication']
             #swagger.summary = 'JWT: Refresh'
             #swagger.description = 'Refresh accessToken with refreshToken'
+              #swagger.parameters['body'] = {
+              in: 'body',
+              required: true,
+              schema: {
+              token : {
+                refresh: ' ... refreshToken ... '
+              }
+              }
+            }
+            
         */
 
     const refreshToken = req.body?.token?.refresh || null;
